Fix selection in numerator overlaps fraction bar
Not just selection of course, descenders and LatexCommandInput were also
visibly overlapping with the fraction bar.

The original reason for the negative margin was the numerator was too
far from the fraction bar, and the denominator too close:
0b754f1103eea198be641410ce0d7e9c0174e1b6

Now instead we remove the negative margin but push the denominator even
further from the fraction bar to preserve their symmetrical distance.

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -239,14 +239,13 @@
 
   .mq-numerator {
     padding: 0 0.1em;
-    margin-bottom: -0.1em;
   }
 
   .mq-denominator {
     border-top: 1px solid;
     float: right; // take out of normal flow to manipulate baseline
     width: 100%;
-    padding: .1em .1em 0 .1em;
+    padding: .2em .1em 0 .1em;
     margin-right: -.1em;
     margin-left: -.1em;
   }
